fix ui for overlap popup

--- a/src/app/components/schedule/schedule.component.css
+++ b/src/app/components/schedule/schedule.component.css
@@ -926,6 +926,17 @@ tbody th {
 }
 .test-bg:first-child {
   border: 0;
+  background-image: linear-gradient(
+    135deg,
+    #ffffff 44.44%,
+    #e3e4e6 44.44%,
+    #e3e4e6 50%,
+    #ffffff 50%,
+    #ffffff 94.44%,
+    #e3e4e6 94.44%,
+    #e3e4e6 100%
+  ) !important;
+  background-size: 13px 13px;
 }
 .overlap-text {
   font-size: 14px;
